...

    static func seedExampleData(in context: ModelContext) {
        let concentrate = Tag(title: "Concentrate")
        let workingSol = Tag(title: "Working Solution")

        let water = Chemical(
            nickname: "Distilled Water",
            expiryDate: nil,
            max: 1000,
            current: 850,
            notes: "",
            tags: [],
            units: .ml
        )

        let ddx = Chemical(
            nickname: "DD-X Concentrate",
            expiryDate: Calendar.current.date(byAdding: .month, value: 6, to: .now),
            max: 500,
            current: 250,
            notes: "",
            tags: [concentrate],
            units: .ml
...
