...
                        Image(systemName: selectedIndex == 0 ? "xmark.circle.fill" : "arrow.left.circle.fill")
                            .symbolRenderingMode(.hierarchical)
                            .resizable()
                            .scaledToFit()
                            .frame(width: 75, height: 75)
                    }
                    .accessibilityLabel(selectedIndex == 0 ? "end" : "previous" )
                    
                    Spacer()
                    
                    if step.totalDuration != nil || step.substep?.duration != nil {
                        Button {
                            withAnimation {
...
                        Image(systemName: selectedIndex == steps.count - 1 ? "xmark.circle.fill" : "arrow.right.circle.fill")
                            .symbolRenderingMode(.hierarchical)
                            .resizable()
                            .scaledToFit()
                            .frame(width: 75, height: 75)
                    }
                    .accessibilityLabel(selectedIndex == steps.count - 1 ? "end" : "next")
                }
            }
        }
        .sheet(item: $presetsSheetContext) { ctx in
            NavigationStack {
                TempSelectionSheet(step: ctx.step)
...
